[package]
name = "aya-log-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "https://github.com/AlexandruCihodaru/aya", branch = "dunno" }
aya-log-common = { path = "../../aya-log-common" }
aya-log-ebpf-macros = { path = "../aya-log-ebpf-macros" }

[lib]
path = "src/lib.rs"
